# SensorFusionSim

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md
CommunicationBus/include/: CommunicationBus.hpp
CommunicationBus/include/CommunicationBus/: CommunicationBus.hpp
CommunicationBus/src/: CommunicationBus.cpp
DataLogger/include/DataLogger/: DataLogger.hpp
DataLogger/src/: DataLogger.cpp
EngagementController/include/EngagementController/: EngagementController.hpp
EngagementController/src/: EngagementController.cpp
SensorManager/include/SensorManager/: SensorManager.hpp
SensorManager/src/: SensorManager.cpp
TargetMotion/include/TargetMotion/: TargetMotionGenerator.hpp
TargetMotion/src/: TargetMotionGenerator.cpp
TargetTracker/include/TargetTracker/: TargetTracker.hpp
TargetTracker/src/: TargetTracker.cpp
TrajectorySolver/include/TrajectorySolver/: TrajectorySolver.hpp
TrajectorySolver/src/: TrajectorySolver.cpp
VirtualTime/include/VirtualTime/: VirtualClock.hpp
VirtualTime/src/: VirtualClock.cpp
Visualization/: liveplot_server.py
Visualization/include/Visualization/: JsonSerializer.hpp  LivePlotClient.hpp  VisualizationPublisher.hpp
Visualization/src/: JsonSerializer.cpp  LivePlotClient.cpp  VisualizationPublisher.cpp
docs/: A10_Configuration_Model_Specification.md  A11_Initialization_Shutdown_Sequence.md  A1_System_Purpose.md  A2_Module_Responsibilities.md  A3_Interface_Design.md  A4_Thread_Model.md  A5_Architectural_Rationale.md  A6_Data_Structures_and_Memory_Layout.md  A7_Message_Timing.md  A8_Fault_Handling_and_Propagation.md  A9_End_to_End_Pipeline_Flow.md  Architecture.md  B1_Coding_Guidelines_and_Style_Rules.md  B2_Module_API_Reference.md  B3_Testing_and_Replay_Strategy.md  DataFlow.md  MathModel.md
include/SensorFusionSim/: Messages.hpp
src/: main.cpp
tests/unit/: Test_CommunicationBus.cpp  Test_DataLogger.cpp  Test_EngagementController.cpp  Test_JsonSerializer.cpp  Test_LivePlotClient.cpp  Test_SensorManager.cpp  Test_TargetTracker.cpp  Test_TrajectorySolver.cpp  Test_VirtualClock.cpp  Test_VisualizationPublisher.cpp
